# Potted_Plant_Transport_Robot

./: .gitignore  README.md  agrobot.urdf  frames_2026-03-24_19.05.27.gv  loop_closure_exp_trajectory.csv  loop_closure_exp_trajectory_tf.csv  reloc_experiment_20260527_201541.csv  reloc_experiment_20260527_202951.csv  reloc_experiment_20260527_204010.csv
dual_descriptor_relocalization/: CMakeLists.txt  package.xml
dual_descriptor_relocalization/config/: dual_descriptor.yaml
dual_descriptor_relocalization/include/dual_descriptor_relocalization/: dual_descriptor_node.hpp
dual_descriptor_relocalization/launch/: dual_descriptor.launch.py
dual_descriptor_relocalization/src/: dual_descriptor_node.cpp
dual_descriptor_relocalization/tools/: kf_extract.cpp
indoor_location/: package.xml
indoor_location/config/: eskf_cfg.yaml
indoor_location/config/rviz/: livox_rviz_config.rviz
indoor_location/include/: param.h
indoor_location/launch/: run_rs16.launch.py
indoor_location/src/: location_p2pl_icp.cpp
indoor_location/src/cloud_process/livox_mid360_lidar/: cloud_process_livox.cpp
indoor_location/src/eskf/: eskf.h
indoor_location/src/nano_flann/: nanoflann.cc  nanoflann.hpp
indoor_location/src/utility/: utility.cpp  utility.h
src/plant_detector/: CMakeLists.txt  package.xml
src/plant_detector/config/: params.yaml
src/plant_detector/config/rviz/: plant_detect_result.rviz
src/plant_detector/include/plant_detector/: euclidean_cluster.hpp  ground_remover.hpp  plant_classifier.hpp
src/plant_detector/launch/: plant_detector.launch.py
src/plant_detector/msg/: PlantCluster.msg  PlantClusterArray.msg  PlantMetrics.msg
src/plant_detector/scripts/: analyze_accuracy.py  analyze_metrics.py
src/plant_detector/src/: euclidean_cluster.cpp  ground_remover.cpp  plant_classifier.cpp  plant_detector_node.cpp
src/robot_base/: CMakeLists.txt  package.xml
src/robot_base/action/: OperatePot.action
src/robot_base/config/: agrobot_diff_controllers.yaml  agrobot_hardware.xml  ekf.yaml
src/robot_base/include/robot_base/: agrobot_hardware_interface.hpp  uart_protocol.hpp  visibility_control.h
src/robot_base/launch/: agrobot_base_bringup.launch.py  agrobot_mini_bringup.launch.py  display.launch.py  laser_filter.launch.py
src/robot_base/msg/: AgrobotInfo.msg
src/robot_base/rviz/: bringup.rviz
src/robot_base/scripts/: angular_calibration.py  benchmark_metrics.sh  dual_imu_calib.py  extract_trajectory.py  linear_calibration.py  plot_cpu.py  plot_delay.py  plot_frequency.py  plot_trajectory.py  send_velocity.py
src/robot_base/src/: agrobot_hardware_interface.cpp  cropbox_component.cpp  laser_filter.cpp  tilt_compensator.cpp
src/robot_base/srv/: SetControlMode.srv
src/robot_base/test/: test_uart_protocol.cpp
src/robot_base/urdf/: agrobot.urdf  agrobot.xacro
src/robot_ctrl/: CMakeLists.txt  package.xml
src/robot_ctrl/action/: BtTaskFileUpload.action
src/robot_ctrl/config/behavior_trees/: generated_bt_models.xml
src/robot_ctrl/config/behavior_trees/main_tree/: aaaa_tree.xml  bdh_tree.xml  test_tree.xml
src/robot_ctrl/config/behavior_trees/other/: bt_plugins.xml  mengcao_tree.xml
src/robot_ctrl/docs/: BT_BLACKBOARD_PORTS.md  ERROR_CODE_MAP.md
src/robot_ctrl/include/robot_ctrl/: robot_state_utils.hpp  roompose_defs.hpp
src/robot_ctrl/include/robot_ctrl/bt_plugins/: error_log_queue.hpp
src/robot_ctrl/include/robot_service/: robot_state_publisher.hpp
src/robot_ctrl/launch/: bt_main.launch.py  launch_manager.launch.py  robot_server_launch.py
src/robot_ctrl/logs/: error_log.txt
src/robot_ctrl/msg/: RobotState.msg  RoomposeConstants.msg
src/robot_ctrl/roompose/: roompose.json
src/robot_ctrl/scripts/: launch_manager.py
src/robot_ctrl/src/: bt_main.cpp
src/robot_ctrl/src/bt_plugins/action/: ack_pending_taskfile_action.cpp  camera_capture_action.cpp  cancel_nav_to_pose_action.cpp  clear_task_command_action.cpp  dock_robot_action.cpp  get_arm_goal_from_tf_action.cpp  get_goal_from_room_action.cpp  get_pending_taskfile_action.cpp  grip_control_action.cpp  interact_with_plc_action.cpp  launch_manager_action.cpp  log_error_action.cpp  nav_to_pose_action.cpp  operate_pot_action_node.cpp  patrol_advance_index_action.cpp  patrol_plan_init_action.cpp  patrol_select_waypoint_action.cpp  publish_robot_state_action.cpp  record_failed_taskfile_action.cpp  send_arm_goal_action.cpp  set_icp_matcher_action.cpp  set_robot_state_action.cpp  taskfile_retry_queue_storage.cpp  taskfile_upload_action.cpp  undock_robot_action.cpp
src/robot_ctrl/src/bt_plugins/condition/: is_battery_low_condition.cpp  is_charging_condition.cpp  task_update.cpp  (+8 more)
src/robot_ctrl/src/robot_service/: roompose_loader.cpp  roompose_recorder.cpp
src/robot_ctrl/srv/: GetRoompose.srv  RecorderPose.srv  TaskUpdata.srv
src/robot_localization/indoor_location/: CMakeLists.txt
src/robot_localization/indoor_location/config/: argbot_mid360.yaml  eskf_cfg.yaml  qr100_config_livox_mid360.yaml
src/robot_localization/indoor_location/launch/: run_argbot_mid360.launch.py  run_qr100_livox_mid360.launch.py
src/robot_localization/indoor_location/scripts/: analyze_loop_closure.py  analyze_loop_closure_tf.py  plot_comparison.py  plot_loop_closure.py  plot_reloc_experiment.py  reloc_experiment_recorder.py  重定位位姿偏移实验.txt
src/robot_localization/indoor_location/src/: location_p2pl_icp.cpp
src/robot_perception/clear_costmap_caller/: CMakeLists.txt  package.xml
src/robot_perception/clear_costmap_caller/config/: clear_costmap_caller.yaml
src/robot_perception/clear_costmap_caller/launch/: clear_costmap_caller.launch.py
src/robot_perception/clear_costmap_caller/src/: clear_costmap_caller.cpp
src/robot_relocalization/polar_icp_registration/: CMakeLists.txt  package.xml
src/robot_relocalization/polar_icp_registration/config/: polar_icp.yaml
src/robot_relocalization/polar_icp_registration/launch/: polar_icp.launch.py  run_argbot.launch.py
src/robot_relocalization/polar_icp_registration/src/: polar_icp_registration.cpp
src/robot_relocalization/polar_icp_registration/tools/: kf_extract.cpp
(+274 files in other folders)
