<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_descriptor_relocalization</name>
  <version>0.1.0</version>
  <description>Dual descriptor relocalization using polar ring and scan context</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>

  <build_depend>pcl</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>libpcl-all-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
